--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7ffcefa
+	base = 5f0098b
 	trimbase = 
 	parent = release/dashing/rqt_robot_steering
-	previous = 
+	previous = 7ffcefa
