--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2d02b72
+	base = f8bc014
 	trimbase = 
 	parent = debian/dashing/rqt_robot_steering
-	previous = 
+	previous = 2d02b72
