--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dbc259d
+	base = 4ec2da3
 	trimbase = 
 	parent = release/eloquent/rqt_robot_steering
-	previous = 
+	previous = dbc259d
