--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a00255c
+	base = c7e898e
 	trimbase = 
 	parent = debian/eloquent/rqt_robot_steering
-	previous = 
+	previous = a00255c
