--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/rqt_robot_steering
-	previous = 
-	base = 32f9623
+	previous = 32f9623
+	base = 60d68fe
 	trim = 
 	trimbase = 
