--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_robot_steering
-	previous = 
-	base = eaf89eb
+	previous = eaf89eb
+	base = 896a6a1
 	trim = 
 	trimbase = 
