--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rqt_robot_steering
-	previous = 
-	base = e913d90
+	previous = e913d90
+	base = 992f4fb
 	trim = 
 	trimbase = 
