--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rqt_robot_steering
-	previous = 
-	base = bf8d622
+	previous = bf8d622
+	base = f06aea5
 	trim = 
 	trimbase = 
