--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0-2": ["Mon Mar 08 2021", "Dirk Thomas", "dthomas@osrfoundation.org"]}
+{"1.0.0-3": ["Tue Apr 20 2021", "Dirk Thomas", "dthomas@osrfoundation.org"], "1.0.0-2": ["Mon Mar 08 2021", "Dirk Thomas", "dthomas@osrfoundation.org"]}
