--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_robot_steering
-	previous = 
-	base = fd12294
+	previous = fd12294
+	base = 7271acc
 	trim = 
 	trimbase = 
