--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_robot_steering
-	previous = 
-	base = 3b0637b
+	previous = 3b0637b
+	base = 04798b0
 	trim = 
 	trimbase = 
