--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_robot_steering
-	previous = 
-	base = 01d5f9d
+	previous = 01d5f9d
+	base = 56c3155
 	trim = 
 	trimbase = 
