--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rqt_robot_steering
-	previous = 
-	base = 8979e42
+	previous = 8979e42
+	base = ba5d61e
 	trim = 
 	trimbase = 
