--- a/tracks.yaml
+++ b/tracks.yaml
@@ -122,5 +122,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros-visualization/rqt_robot_steering.git
-    version: 1.0.0
-    version_saved: :{auto}
+    version: :{auto}
