--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_robot_steering
-	previous = 
-	base = 773ca7b
+	previous = 773ca7b
+	base = 7145df1
 	trim = 
 	trimbase = 
