--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_robot_steering
-	previous = 
-	base = 7b4bc53
+	previous = 7b4bc53
+	base = 00f3b46
 	trim = 
 	trimbase = 
