--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_robot_steering
-	previous = 
-	base = 8f4985f
+	previous = 8f4985f
+	base = 132eda1
 	trim = 
 	trimbase = 
