--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rqt_robot_steering
-	previous = 
-	base = a40d6ff
+	previous = a40d6ff
+	base = 328a388
 	trim = 
 	trimbase = 
