--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0-4": ["Tue Mar 21 2023", "Dirk Thomas", "dthomas@osrfoundation.org"]}
+{"1.0.0-5": ["Thu Apr 20 2023", "Dirk Thomas", "dthomas@osrfoundation.org"], "1.0.0-4": ["Tue Mar 21 2023", "Dirk Thomas", "dthomas@osrfoundation.org"]}
