--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_robot_steering
-	previous = 
-	base = 23aabcc
+	previous = 23aabcc
+	base = 34c377d
 	trim = 
 	trimbase = 
