--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_robot_steering
-	previous = 
-	base = 786a56e
+	previous = 786a56e
+	base = da3b69e
 	trim = 
 	trimbase = 
