--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rqt_robot_steering
-	previous = 
-	base = 22e984f
+	previous = 22e984f
+	base = bc1b926
 	trim = 
 	trimbase = 
