--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_robot_steering
-	previous = 
-	base = 23aabcc
+	previous = 23aabcc
+	base = 75a63a7
 	trim = 
 	trimbase = 
