--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rqt_robot_steering
-	previous = 
-	base = 0c7de8d
+	previous = 0c7de8d
+	base = 866708b
 	trim = 
 	trimbase = 
