--- a/tracks.yaml
+++ b/tracks.yaml
@@ -174,7 +174,8 @@ tracks:
     ros_distro: jazzy
     vcs_type: git
     vcs_uri: https://github.com/ros-visualization/rqt_robot_steering.git
-    version: :{auto}
+    version: 1.0.0
+    version_saved: :{auto}
   rolling:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
