--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0-5": ["Wed Mar 06 2024", "Dirk Thomas", "dthomas@osrfoundation.org"]}
+{"1.0.0-6": ["Fri Apr 19 2024", "Dirk Thomas", "dthomas@osrfoundation.org"], "1.0.0-5": ["Wed Mar 06 2024", "Dirk Thomas", "dthomas@osrfoundation.org"]}
