--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0-5": ["Wed Mar 06 2024", "Dirk Thomas", "dthomas@osrfoundation.org"]}
+{"1.0.1-1": ["Fri Mar 21 2025", "Dirk Thomas", "dthomas@osrfoundation.org"], "1.0.0-5": ["Wed Mar 06 2024", "Dirk Thomas", "dthomas@osrfoundation.org"]}
