--- a/tracks.yaml
+++ b/tracks.yaml
@@ -164,7 +164,7 @@ tracks:
       :{release_inc} --os-name fedora
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
-    devel_branch: dashing-devel
+    devel_branch: jazzy
     last_version: 1.0.2
     name: upstream
     patches: null
